--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-redux-thunk",
+  "name": "ember-redux-thunk-shim",
   "dependencies": {
     "ember": "^2.7.0",
     "ember-cli-shims": "0.1.1",
