--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,5 @@
 /bower_components
-/config/ember-try.js
+/config
 /dist
 /tests
 /tmp
@@ -12,5 +12,6 @@
 .watchmanconfig
 .travis.yml
 bower.json
+dependency-snapshot.json
 ember-cli-build.js
 testem.js
