--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-redux-thunk-shim",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "redux-thunk for Ember apps",
   "directories": {
     "doc": "doc",
@@ -32,6 +32,7 @@
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-chai": "0.3.2",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "0.3.6",
     "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-mocha": "0.13.2",
@@ -43,8 +44,7 @@
     "ember-resolver": "^2.1.1",
     "ember-symbol-observable": "0.1.2",
     "ember-test-utils": "^1.10.3",
-    "loader.js": "^4.1.0",
-    "redux-thunk": "2.2.0"
+    "loader.js": "^4.1.0"
   },
   "keywords": [
     "ember-addon",
@@ -52,9 +52,10 @@
     "redux-thunk"
   ],
   "dependencies": {
-    "broccoli-merge-trees": "^1.1.4",
+    "ember-cli": ">=2.10.0",
     "ember-cli-babel": "^5.1.9",
-    "ember-cli-htmlbars": "^1.1.0"
+    "ember-cli-node-assets": "^0.2.2",
+    "redux-thunk": "2.2.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
