--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-cli-mocha": "0.13.2",
     "ember-cli-test-loader": "^1.1.1",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-version-checker": "^1.3.1",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.1.1",
     "ember-load-initializers": "0.6.3",
@@ -52,10 +53,11 @@
     "redux-thunk"
   ],
   "dependencies": {
-    "ember-cli": ">=2.10.0",
+    "broccoli-stew": ">=0.3.0",
     "ember-cli-babel": "^5.1.9",
     "ember-cli-node-assets": "^0.2.2",
-    "redux-thunk": "2.2.0"
+    "ember-cli-version-checker": "^1.3.1",
+    "redux-thunk": "^2.2.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
