--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   ],
   "dependencies": {
     "broccoli-merge-trees": "^1.1.4",
-    "ember-cli-babel": "^6.0.0-beta.4",
+    "ember-cli-babel": "^6.1.0",
     "ember-cli-htmlbars": "^1.1.1"
   },
   "ember-addon": {
