--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.5.0",
-    "ember-cli": "2.13.0",
+    "ember-cli": "2.13.1",
+    "ember-cli-eslint": "^3.0.0",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.0",
     "ember-cli-inject-live-reload": "^1.6.1",
-    "ember-cli-qunit": "^4.0.0-beta.1",
+    "ember-cli-qunit": "^4.0.0",
     "ember-cli-test-loader": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.1.0",
@@ -52,8 +54,7 @@
   ],
   "dependencies": {
     "broccoli-merge-trees": "^1.1.4",
-    "ember-cli-babel": "^6.1.0",
-    "ember-cli-htmlbars": "^1.1.1"
+    "ember-cli-babel": "^6.1.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
