--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/ember-redux/ember-redux-thunk-shim",
   "engines": {
-    "node": ">= 5.0.0"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "bugs": {
     "url": "https://github.com/ember-redux/ember-redux-thunk-shim/issues"
@@ -28,21 +28,21 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.5.0",
-    "ember-cli": "2.13.1",
-    "ember-cli-eslint": "^3.0.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
+    "ember-cli": "2.15.0-beta.2",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-test-loader": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-symbol-observable": "0.1.2",
-    "ember-source": "~2.13.0",
+    "ember-source": "~2.15.0-beta.2",
     "ember-cli-shims": "^1.1.0",
     "loader.js": "^4.2.3",
     "redux-thunk": "2.2.0"
@@ -54,7 +54,7 @@
   ],
   "dependencies": {
     "broccoli-merge-trees": "^1.1.4",
-    "ember-cli-babel": "^6.1.0"
+    "ember-cli-babel": "^6.6.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
