--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-redux-thunk-shim",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "redux-thunk for Ember apps",
   "directories": {
     "doc": "doc",
@@ -28,7 +28,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.5.0",
-    "ember-cli": "2.15.0-beta.2",
+    "ember-cli": "2.15.0",
     "ember-cli-eslint": "^4.0.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-htmlbars": "^2.0.1",
@@ -41,8 +41,8 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
-    "ember-symbol-observable": "0.1.2",
-    "ember-source": "~2.15.0-beta.2",
+    "ember-symbol-observable": "1.0.0",
+    "ember-source": "~2.15.0",
     "ember-cli-shims": "^1.1.0",
     "loader.js": "^4.2.3",
     "redux-thunk": "2.2.0"
@@ -54,7 +54,7 @@
   ],
   "dependencies": {
     "broccoli-merge-trees": "^1.1.4",
-    "ember-cli-babel": "^6.8.1"
+    "ember-cli-babel": "^6.8.2"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
